Front End design

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 /node_modules
 /dist
 .parcel-cache
+
+useOnlineStatus.jsx
+useRestaurentMenu.jsx
+Grocery.jsx
+MenuItems.jsx
+RestaurentMenu.jsx
+UserClass.jsx
+Error.jsx
+
