--- a/package.json
+++ b/package.json
@@ -11,7 +11,15 @@
   "author": "yash",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "babel-jest": "^29.7.0",
     "buffer": "^6.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.11.0",
     "process": "^0.11.10"
   },
@@ -25,7 +33,10 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0"
   },
-  "browserlist": [
+  "transform": {
+    "\\.js$": "D:NamasteReact - Akshay sainiepisode 1-3\node_modules\babel-jest"
+  },
+  "browserslist": [
     "last 10 versions"
   ]
 }
